# Lab6OS

./: CMakeLists.txt  README.md  run_tests.sh  пояснение по работе.txt
Code/: Main.cpp
